--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,15 +7,12 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-	<%= link_to "Home", root_path %>
-	<%= link_to "About", about_path %>
-	<%= link_to "Sign Up", signup_path %>
+	<%= render "layouts/header" %>
+	
 	<%= yield %>
 
 	<% flash.each do |name, msg| %>
     <%= content_tag(:div, msg, class: "alert alert-#{name}") %>
 	<% end %>
-
 </body>
 </html>
