--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,7 @@
 <h1>Welcome to Errupt!</h1>
+<% if user_signed_in? %>
+
+<% else %>
+<%= link_to "log in", new_user_session_path  %>
+<%= link_to "sign up", new_user_registration_path %>
+<% end %>
