--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,6 +2,9 @@
 		<li><%= link_to "Home", root_path %></li>
 		<li><%= link_to "About", about_path %></li>
 		<% if user_signed_in? %>
-		<li><%= link_to "Log out" %></li>
+		<li><%= link_to "Dashboard"%></li>
+		<li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+		<% else %>
+			<li><%= link_to "Log In", new_user_session_path %></li>
 	  <% end %>
 	</ul>
