--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,6 +2,6 @@
 <% if user_signed_in? %>
 
 <% else %>
-<%= link_to "log in", new_user_session_path  %>
-<%= link_to "sign up", new_user_registration_path %>
+	<%= link_to "Log in", new_user_session_path %>
+  <%= link_to "Sign up", new_user_registration_path%>
 <% end %>
