Add form to create new errorlog, add dashboard action to pages controller, change errorlog's public? to just public, update header partial with link to dashboard, updat errorlog controller to build error for current user.Build action causes some tests to fail. Try alternative later.

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,1 +1,10 @@
-<p>Dashboard for <%= current_user.firstname %></p>
+<p><%= current_user.firstname.capitalize %>'s Dashboard</p>
+
+<div>
+	<h3>Your Error Logs</h3>
+	<% current_user.errorlogs.each do |errorlog|%>
+		<%= errorlog.title %>
+	<% end %>
+</div>
+
+<%= link_to "Create new Error Log", new_errorlog_path %>
