Update errorlog model, view and controller to allow image uploads

--- a/app/views/errorlogs/_new_error_form.html.erb
+++ b/app/views/errorlogs/_new_error_form.html.erb
@@ -1,10 +1,10 @@
 <h2>New error</h2>
 
-<%= form_for @errorlog, html: {multipart: true} do |f| %>
+<%= form_for @errorlog, html: { multipart: true } do |f| %>
 
   <div>
     <%= f.label :image %>
-    <%= f.file_field :title, autofocus: true %>
+    <%= f.file_field :image %>
   </div>
 
   <div><%= f.label :title %><br />
