--- a/app/views/errorlogs/show.html.erb
+++ b/app/views/errorlogs/show.html.erb
@@ -1,1 +1,5 @@
-<p>Errorlogs show page</p>
+<h2>Errorlog</h2>
+
+<%= image_tag @errorlog.image.url %>
+<%= @errorlog.title %>
+<%= @errorlog.description %>
