modify views to display additional info

--- a/app/views/errorlogs/_new_error_form.html.erb
+++ b/app/views/errorlogs/_new_error_form.html.erb
@@ -11,7 +11,7 @@
   <%= f.text_field :title, autofocus: true %></div>
 
   <div><%= f.label :description %><br />
-  <%= f.text_field :description, autofocus: true %></div>
+  <%= f.text_area :description, size: "60x12",autofocus: true %></div>
 
   <div><%= f.label :os %><br />
   <%= f.text_field :os, autofocus: true %></div>
