--- a/app/views/errorlogs/show.html.erb
+++ b/app/views/errorlogs/show.html.erb
@@ -5,8 +5,8 @@
 <% end %>
 </div>
 
-<div class="err-desc">
-	<%= @errorlog.description %>
+<div>
+	<%= simple_format(@errorlog.description) %>
 </div>
 
 <div class="err-info">
@@ -17,3 +17,5 @@
 	<p><%= @errorlog.framework %></p>
 	<p><%= @errorlog.framework_version %></p>
 </div>
+
+<p><%= link_to "Add new solution", new_errorlog_solution_path(@errorlog) %></p>
