--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,6 +6,4 @@
   <%= link_to "Sign up", new_user_registration_path%>
 <% end %>
 
-<% @public_errorlogs.each do |errorlog|  %>
-<%= errorlog.title %>
-<% end %>
+<p>Home page</p>
