Fix error in solution where it wasn't accepting false values by updating model

--- a/app/views/errorlogs/show.html.erb
+++ b/app/views/errorlogs/show.html.erb
@@ -18,4 +18,8 @@
 	<p><%= @errorlog.framework_version %></p>
 </div>
 
+<% @errorlog.solutions.each do |solution| %>
+<%= solution.description %>
+<% end %>
+
 <p><%= link_to "Add new solution", new_errorlog_solution_path(@errorlog) %></p>
