fix error in new errorlog form where boolean values weren't being passed

--- a/app/views/errorlogs/_new_error_form.html.erb
+++ b/app/views/errorlogs/_new_error_form.html.erb
@@ -32,9 +32,9 @@
   <%= f.text_field :framework_version, autofocus: true %></div>
 
   <div>
-    <%= radio_button_tag(:public, true) %>
+    <%= f.radio_button(:public, true) %>
     <%= label_tag(:public, "Public") %>
-    <%= radio_button_tag(:public, false) %>
+    <%= f.radio_button(:public, false) %>
     <%= label_tag(:public, "Private") %>
   </div>
 
