Create edit view for errorlog

--- a/app/views/errorlogs/show.html.erb
+++ b/app/views/errorlogs/show.html.erb
@@ -18,8 +18,10 @@
 	<p><%= @errorlog.framework_version %></p>
 </div>
 
+
+
 <% @errorlog.solutions.each do |solution| %>
 <%= solution.description %>
 <% end %>
 
-<p><%= link_to "Add new solution", new_errorlog_solution_path(@errorlog) %></p>
+<p><%= link_to "Edit Error Log", edit_errorlog_path %></p>
