--- a/app/views/errorlogs/edit.html.erb
+++ b/app/views/errorlogs/edit.html.erb
@@ -1,1 +1,49 @@
 <p>Edit page for errorlog</p>
+
+<h2>New error</h2>
+
+<%= form_for @errorlog, html: { multipart: true } do |f| %>
+
+  <div><%= f.label :title %><br />
+  <%= f.text_field :title, autofocus: true %></div>
+
+  <div><%= f.label :description %><br />
+  <%= f.text_area :description, size: "60x12",autofocus: true %></div>
+
+  <div>
+    <%= f.label :image %>
+    <%= f.file_field :image %>
+  </div>
+
+  <div><%= f.label :os, "OS" %><br />
+  <%= f.text_field :os, autofocus: true %></div>
+
+  <div><%= f.label :os_version, "OS version" %><br />
+  <%= f.text_field :os_version, autofocus: true %></div>
+
+  <div><%= f.label :language %><br />
+  <%= f.text_field :language, autofocus: true %></div>  
+
+  <div><%= f.label :language_version %><br />
+  <%= f.text_field :language_version, autofocus: true %></div>
+
+  <div><%= f.label :framework %><br />
+  <%= f.text_field :framework, autofocus: true %></div>  
+
+  <div><%= f.label :framework_version %><br />
+  <%= f.text_field :framework_version, autofocus: true %></div>
+
+  <div>
+    <%= f.radio_button(:public, true) %>
+    <%= label_tag(:public, "Public") %>
+    <%= f.radio_button(:public, false) %>
+    <%= label_tag(:public, "Private") %>
+  </div>
+
+  <div class="field">
+    <%= f.label :tag_list, "Tags (separated by commas)" %><br />
+    <%= f.text_field :tag_list %>
+  </div>
+
+  <div><%= f.submit "Update Error Log" %></div>
+<% end %>
