--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,22 @@
-	<ul>
-		<li><%= link_to "Home", root_path %></li>
-		<li><%= link_to "About", about_path %></li>
-		<% if user_signed_in? %>
-		<li><%= link_to "Dashboard", dashboard_path %></li>
-		<li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
-		<% else %>
-			<li><%= link_to "Log In", new_user_session_path %></li>
-	  <% end %>
-	</ul>
+<nav class="top-bar" data-topbar role="navigation">
+  <ul class="title-area">
+    <li class="name">
+      <h1><a href="#">Errupt</a></h1>
+    </li>
+    <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+  </ul>
+
+  <section class="top-bar-section">
+  	<!-- Left Nav Section -->
+  	<ul class="left">
+  	  <ul>
+  	  	<li><%= link_to "Home", root_path %></li>
+  	  	<li><%= link_to "About", about_path %></li>
+  	  </ul>
+  	</ul>
+    <!-- Right Nav Section -->
+    <ul class="right">
+    	<%= render 'layouts/nav_links'%>
+    </ul>
+  </section>
+</nav>
