--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <nav class="top-bar" data-topbar role="navigation">
   <ul class="title-area">
     <li class="name">
-      <h1><a href="#">Errupt</a></h1>
+      <h1><a href="/">Errupt</a></h1>
     </li>
     <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
   </ul>
@@ -10,8 +10,7 @@
   	<!-- Left Nav Section -->
   	<ul class="left">
   	  <ul>
-  	  	<li><%= link_to "Home", root_path %></li>
-  	  	<li><%= link_to "About", about_path %></li>
+  	  	
   	  </ul>
   	</ul>
     <!-- Right Nav Section -->
