add styling for new error form, fix home button in dashboard, add styling for sign up form

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -54,9 +54,28 @@
 }
 
 .dash-panel h5 a{
-	color: red;
+	color: #CF000F;
 }
 
+.signup-form {
+	width: 60%;
+	margin-left: 20%;
+}
 
+.new-error-form {
+	margin-left: 5%;
+}
 
+.red-button {
+	background-color: #CF000F;
+}
 
+.title {
+	background-color: #CF000F;
+	margin-top: 2%;
+	margin-bottom: 2%;
+}
+
+.title h2, h3 {
+	color: white;
+}
