--- a/app/views/errorlogs/_new_error_form.html.erb
+++ b/app/views/errorlogs/_new_error_form.html.erb
@@ -1,49 +1,86 @@
-<h2>New error</h2>
+  <div class="row">
+    <div class="large-12 columns title">
+      <h2>New Error Log</h2>
+    </div>
+  </div>
 
 <%= form_for @errorlog, html: { multipart: true } do |f| %>
 
-  <div><%= f.label :title %><br />
-  <%= f.text_field :title, autofocus: true %></div>
-
-  <div><%= f.label :description %><br />
-  <%= f.text_area :description, size: "60x12",autofocus: true %></div>
-
-  <div>
-    <%= f.label :image %>
-    <%= f.file_field :image %>
+  <div class="row">
+    <div class="large-12 columns">
+      <%= f.label :title %>
+      <%= f.text_field :title, autofocus: true %>
+    </div>
   </div>
 
-  <div><%= f.label :os, "OS" %><br />
-  <%= f.text_field :os, autofocus: true %></div>
-
-  <div><%= f.label :os_version, "OS version" %><br />
-  <%= f.text_field :os_version, autofocus: true %></div>
-
-  <div><%= f.label :language %><br />
-  <%= f.text_field :language, autofocus: true %></div>  
-
-  <div><%= f.label :language_version %><br />
-  <%= f.text_field :language_version, autofocus: true %></div>
-
-  <div><%= f.label :framework %><br />
-  <%= f.text_field :framework, autofocus: true %></div>  
-
-  <div><%= f.label :framework_version %><br />
-  <%= f.text_field :framework_version, autofocus: true %></div>
-
-  <div>
-    <%= f.radio_button(:public, true) %>
-    <%= label_tag(:public, "Public") %>
-    <%= f.radio_button(:public, false) %>
-    <%= label_tag(:public, "Private") %>
+  <div class="row">
+    <div class="large-12 columns">
+      <%= f.label :description %>
+      <%= f.text_area :description, size: "60x10",autofocus: true %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :tag_list, "Tags (separated by commas)" %><br />
-    <%= f.text_field :tag_list %>
+  <div class="row">
+    <div class="large-12 columns">
+      <%= f.label :image %>
+      <%= f.file_field :image %>
+    </div>
   </div>
 
-  <div><%= f.submit "Create Log" %></div>
+  <div class="row">
+    <div class="large-6 columns">
+      <%= f.label :os, "OS" %>
+      <%= f.text_field :os, autofocus: true %>
+    </div>
+    <div class="large-6 columns">
+      <%= f.label :os_version, "OS version" %>
+      <%= f.text_field :os_version, autofocus: true %>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="large-6 columns">
+      <%= f.label :language %>
+      <%= f.text_field :language, autofocus: true %>
+    </div>
+    <div class="large-6 columns">
+      <%= f.label :language_version %>
+      <%= f.text_field :language_version, autofocus: true %>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="large-6 columns">
+      <%= f.label :framework %>
+      <%= f.text_field :framework, autofocus: true %>
+    </div>
+    <div class="large-6 columns">
+      <%= f.label :framework_version %>
+      <%= f.text_field :framework_version, autofocus: true %>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="large-12 columns">
+      <%= f.radio_button(:public, true) %>
+      <%= label_tag(:public, "Public") %>
+      <%= f.radio_button(:public, false) %>
+      <%= label_tag(:public, "Private") %>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="field large-12 columns">
+      <%= f.label :tag_list, "Tags (separated by commas)" %><br />
+      <%= f.text_field :tag_list %>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="large-12 columns">
+      <%= f.submit "Create Log", class: "button red-button" %>
+    </div>
+  </div>
 <% end %>
 
 
