--- a/app/views/errorlogs/new.html.erb
+++ b/app/views/errorlogs/new.html.erb
@@ -1,5 +1,3 @@
-<div class="pure-g">
-    <div class="pure-u-1-2">
-    	<%= render 'new_error_form' %>
-    </div>
+<div class="small-8 columns end new-error-form">
+	<%= render 'new_error_form' %>
 </div>
