--- a/app/views/errorlogs/show.html.erb
+++ b/app/views/errorlogs/show.html.erb
@@ -1,25 +1,55 @@
-<h2><%= @errorlog.title %></h2>
-<div class="screenshot">
 <% if @errorlog.image_file_name != nil %>
-	<%= image_tag @errorlog.image.url %>
+	<div class="row">
+		<div class="small-9 columns title">
+			<h2><%= @errorlog.title %></h2>
+		</div>
+		<div class="small-9 column screenshot panel">
+			<%= image_tag @errorlog.image.url %>
+		</div>
+		<div class="small-3 columns panel desktop-only">
+			<div class="err-info">
+				<p>OS: <%= @errorlog.os %></p>
+				<p>OS Version: <%= @errorlog.os_version %></p>
+				<p>Language: <%= @errorlog.language %></p>
+				<p>Language Version: <%= @errorlog.language_version %></p>
+				<p>Framework: <%= @errorlog.framework %></p>
+				<p>Framework Version: <%= @errorlog.framework_version %></p>
+			  <p>
+			  	<% @errorlog.tags.map(&:tag_name).map {|t| link_to t, tag_path(t)}.each do |t| %>
+          	<span class="[success alert secondary] label"><%= t %></span>
+          <% end %>
+        </p>
+			</div>
+			<p><%= link_to "Edit Error Log", edit_errorlog_path %></p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="err-desc small-9 columns panel">
+			<%= simple_format(@errorlog.description) %>
+		</div>
+	</div>
+<% else %>
+	<div class="row">
+		<div class="small-9 columns title">
+			<h2><%= @errorlog.title %></h2>
+		</div>
+		<div class="err-desc small-9 columns panel">
+			<%= simple_format(@errorlog.description) %>
+		</div>
+
+		<div class="small-3 columns">
+			<div class="err-info">
+				<p><%= @errorlog.os %></p>
+				<p><%= @errorlog.os_version %></p>
+				<p><%= @errorlog.language %></p>
+				<p><%= @errorlog.language_version %></p>
+				<p><%= @errorlog.framework %></p>
+				<p><%= @errorlog.framework_version %></p>
+			</div>
+			<p><%= link_to "Edit Error Log", edit_errorlog_path %></p>
+		</div>
+	</div>
 <% end %>
-</div>
-
-<div>
-	<%= simple_format(@errorlog.description) %>
-</div>
-
-<div class="err-info">
-	<p><%= @errorlog.os %></p>
-	<p><%= @errorlog.os_version %></p>
-	<p><%= @errorlog.language %></p>
-	<p><%= @errorlog.language_version %></p>
-	<p><%= @errorlog.framework %></p>
-	<p><%= @errorlog.framework_version %></p>
-</div>
-<p><%= link_to "Edit Error Log", edit_errorlog_path %></p>
-
-
 
 <% @errorlog.solutions.each do |solution| %>
 <%= solution.description %>
