--- a/app/views/errorlogs/show.html.erb
+++ b/app/views/errorlogs/show.html.erb
@@ -3,7 +3,7 @@
 		<div class="small-9 columns title">
 			<h2><%= @errorlog.title %></h2>
 		</div>
-		<div class="small-9 column screenshot panel">
+		<div class="small-9 columns screenshot panel">
 			<%= image_tag @errorlog.image.url %>
 		</div>
 		<div class="small-3 columns panel desktop-only">
@@ -36,22 +36,50 @@
 		<div class="err-desc small-9 columns panel">
 			<%= simple_format(@errorlog.description) %>
 		</div>
-
-		<div class="small-3 columns">
+		<div class="small-3 columns panel desktop-only">
 			<div class="err-info">
-				<p><%= @errorlog.os %></p>
-				<p><%= @errorlog.os_version %></p>
-				<p><%= @errorlog.language %></p>
-				<p><%= @errorlog.language_version %></p>
-				<p><%= @errorlog.framework %></p>
-				<p><%= @errorlog.framework_version %></p>
+				<p>OS: <%= @errorlog.os %></p>
+				<p>OS Version: <%= @errorlog.os_version %></p>
+				<p>Language: <%= @errorlog.language %></p>
+				<p>Language Version: <%= @errorlog.language_version %></p>
+				<p>Framework: <%= @errorlog.framework %></p>
+				<p>Framework Version: <%= @errorlog.framework_version %></p>
+			  <p>
+			  	<% @errorlog.tags.map(&:tag_name).map {|t| link_to t, tag_path(t)}.each do |t| %>
+          	<span class="[success alert secondary] label"><%= t %></span>
+          <% end %>
+        </p>
+				<p><%= link_to "Edit Error Log", edit_errorlog_path %></p>
 			</div>
-			<p><%= link_to "Edit Error Log", edit_errorlog_path %></p>
 		</div>
 	</div>
 <% end %>
 
+<div class="row">
+	<div class="small-9 columns solution-button">
+		<%= link_to "Add Solution", new_errorlog_solution_path(@errorlog), class: "button green-button" %>
+	</div>
+</div>
+
 <% @errorlog.solutions.each do |solution| %>
-<%= solution.description %>
-<p><%= link_to "Edit Solution", edit_errorlog_solution_path(@errorlog, solution) %></p>
+<% if solution.worked == true %>
+<div class="row">
+	<div class="small-9 columns panel callout radius worked-solution-desc">
+		<%= solution.description %>
+		<%= link_to "Edit Solution", edit_errorlog_solution_path(@errorlog, solution) %>
+	</div>
+</div>
+<% else %>
+<div class="row">
+	<div class="small-9 columns panel radius failed-solution-desc">
+		<%= solution.description %>
+		<%= link_to "Edit Solution", edit_errorlog_solution_path(@errorlog, solution) %>
+	</div>
+</div>
 <% end %>
+<% end %>
+
+
+
+
+
