--- a/app/views/errorlogs/show.html.erb
+++ b/app/views/errorlogs/show.html.erb
@@ -57,7 +57,7 @@
 
 <div class="row">
 	<div class="small-9 columns solution-button">
-		<%= link_to "Add Solution", new_errorlog_solution_path(@errorlog), class: "button green-button" %>
+		<%= link_to "Add Solution", new_errorlog_solution_path(@errorlog), class: "button [tiny] green-button" %>
 	</div>
 </div>
 
