--- a/app/views/layouts/_sidenav.html.erb
+++ b/app/views/layouts/_sidenav.html.erb
@@ -1,11 +1,11 @@
-<div class="icon-bar vertical three-up large-1 columns desktop-only">
+<div class="icon-bar vertical three-up large-2 columns end desktop-only">
   <a class="item" href="/dashboard">
-    <i class="fa fa-home"></i>
+    <i class="fa fa-home"> Dashboard</i>
   </a>
-  <a class="item" href="errorlogs/new">
-    <i class="fa fa-plus"></i>
+  <a class="item" href="/errorlogs/new">
+    <i class="fa fa-plus"> New Error</i>
   </a>
   <a class="item">
-    <i class="fa fa-cogs"></i>
+    <i class="fa fa-cogs"> Account</i>
   </a>
 </div>
