--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,7 +18,7 @@
 .home-panel {
 	// background-color: #005e99;
 	height: 100%;
-	background-image: url("errupt-bg2.jpg")
+	background-image: url("errupt-bg4.jpg")
 }
 
 body {
@@ -27,7 +27,9 @@ body {
 }
 
 .home-panel-content, h1 {
-	color: black;
+	color: white;
+	background-color: black;
+	opacity: 0.8;
 }
 
 .home-panel-image {
@@ -41,6 +43,8 @@ body {
 .top-bar .name h1  {
 	color: white;
 	background-color: #CF000F;
+	width: 165px;
+	text-align: center;
 }
 
 //small screen sizes
@@ -83,12 +87,14 @@ body {
 
 
 .signup-form {
-	width: 60%;
-	margin-left: 20%;
+	// width: 60%;
+	// margin-left: 20%;
+	// margin-right: auto !important;
 }
 
 .new-error-form {
-	margin-left: 5%;
+	// margin-left: 5%;
+	// float: center;
 }
 
 .red-button {
@@ -97,7 +103,7 @@ body {
 
 .green-button {
 	background-color: #2ECC71;
-	border-left: 4px black solid;
+	// border-left: 4px black solid;
 }
 
 .solution-button {
@@ -157,31 +163,79 @@ body {
 	font-size: 1em;
 }
 
-.sm-dash-widget1 {
-	height: 200px;
-	background-color: #6BB9F0;
-	border-left: 5px solid white;
+// .sm-dash-widget1 {
+// 	height: 200px;
+// 	background-color: #6BB9F0;
+// 	border-left: 5px solid white;
+// }
+
+// .sm-dash-widget2 {
+// 	height: 200px;
+// 	background-color: #36D7B7;
+// 	border-left: 5px solid white;
+// }
+
+
+.container2 {
+	background-color: #BDC3C7;
 }
 
-.sm-dash-widget2 {
-	height: 200px;
-	background-color: #36D7B7;
-	border-left: 5px solid white;
-}
-
-.sm-dash-widget1 h2, .sm-dash-widget2 h2 {
-	font-size: 2em;
+.circle-widget1 h2, .circle-widget2 h2 {
+	font-size: 1.5em;
 	font-family: 'Open Sans', sans-serif;
+	color: white;
+	padding-top: 15%;
 	text-align: center;
 }
 
-.sm-dash-widget1 p, .sm-dash-widget2 p {
+.circle-widget1 {
+	border-radius: 50%;
+	width: 210px;
+	height: 210px; 
+	background-color: #f1c40f;
+	border: 5px solid white;
+}
+
+.circle-widget2 {
+	border-radius: 50%;
+	width: 210px;
+	height: 210px; 
+	background-color: #36D7B7;
+	border: 5px solid white;
+}
+
+
+.circle-widget1 p, .circle-widget2 p {
 	font-size: 3em;
 	text-align: center;
 	color: white;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Roboto', sans-serif;
 }
 
-.unique-tags a {
+.unique-tags-widget a {
 	color: white !important;
+}
+
+.unique-tags-widget {
+	background-color: #6BB9F0;
+	border: 5px solid white;
+}
+
+
+.unique-tags-widget h2 {
+	font-size: 1.5em;
+	font-family: 'Open Sans', sans-serif;
+	text-align: center;
+}
+
+.signup-form * {
+	// margin-right: auto !important;
+}
+
+.row {
+
+}
+
+#test {
+	margin-right: 0 !important;
 }
