--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,53 +1,60 @@
-<h2>Sign up</h2>
-<div class="signup-form">
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= devise_error_messages! %>
-    <div class="row">
-      <div class="small-12 large-6 columns">
-        <%= f.label :firstname %>
-        <%= f.text_field :firstname, autofocus: true %>
-      </div>
+<div class="row">
+  <div class="row">
+    <div class="small-12 large-8 columns end title">
+      <h2>Sign Up</h2>
     </div>
+  </div>
 
-    <div class="row">
-      <div class="small-12 large-6 columns">
-        <%= f.label :lastname %>
-        <%= f.text_field :lastname, autofocus: true %>
-      </div> 
-    </div>  
-
-    <div class="row">
-      <div class="small-12 large-6 columns">
-        <%= f.label :username %>
-        <%= f.text_field :username, autofocus: true %>
+  <div class="signup-form large-10 columns">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= devise_error_messages! %>
+      <div class="row">
+        <div class="small-12 large-6 columns">
+          <%= f.label :firstname %>
+          <%= f.text_field :firstname, autofocus: true %>
+        </div>
       </div>
-    </div>
 
-    <div class="row">
-      <div class="small-12 large-6 columns">
-        <%= f.label :email %>
-        <%= f.email_field :email, autofocus: true %>
-      </div>
-    </div>
+      <div class="row">
+        <div class="small-12 large-6 columns">
+          <%= f.label :lastname %>
+          <%= f.text_field :lastname, autofocus: true %>
+        </div> 
+      </div>  
 
-    <div class="row">
-      <div class="small-12 large-6 columns">
-        <%= f.label :password %> <% if @validatable %><i>(<%= @minimum_password_length %> characters minimum)</i><% end %><br />
-        <%= f.password_field :password, autocomplete: "off" %>
+      <div class="row">
+        <div class="small-12 large-6 columns">
+          <%= f.label :username %>
+          <%= f.text_field :username, autofocus: true %>
+        </div>
       </div>
-    </div>
 
-    <div class="row">
-      <div class="small-12 large-6 columns">
-        <%= f.label :password_confirmation %>
-        <%= f.password_field :password_confirmation, autocomplete: "off" %>
+      <div class="row">
+        <div class="small-12 large-6 columns">
+          <%= f.label :email %>
+          <%= f.email_field :email, autofocus: true %>
+        </div>
       </div>
-    </div>
 
-    <div class="row">
-      <div class="small-6 columns">
-        <%= f.submit "Sign up" %>
+      <div class="row">
+        <div class="small-12 large-6 columns">
+          <%= f.label :password %> <% if @validatable %><i>(<%= @minimum_password_length %> characters minimum)</i><% end %><br />
+          <%= f.password_field :password, autocomplete: "off" %>
+        </div>
       </div>
-    </div>
-  <% end %>
+
+      <div class="row">
+        <div class="small-12 large-6 columns">
+          <%= f.label :password_confirmation %>
+          <%= f.password_field :password_confirmation, autocomplete: "off" %>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="small-6 columns">
+          <%= f.submit "Sign up" %>
+        </div>
+      </div>
+    <% end %>
+  </div>
 </div>
