--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,45 +1,42 @@
 <div class="dashboard-content small-9 columns">
-
 	<div class="title">
 		<h3>Your Error Logs</h3>
 	</div>
 
-	<div class="panel small-6 columns container1">
+	<div class="panel small-12 large-6 columns container1">
 		<% @user_errorlogs.each do |errorlog|%>
 			<div class="panel dash-panel">
-			  <h5><%= link_to errorlog.title, errorlog_path(errorlog) %></h5>
+			  <h5><i class="fa fa-exclamation-triangle"></i> <%= link_to errorlog.title, errorlog_path(errorlog) %></h5>
 			  <p>
 			  	<% raw errorlog.tags.map(&:tag_name).map {|t| link_to t, tag_path(t)}.each do |t| %>
-          	<span class="[success alert secondary] label"><%= t %></span>
-          <% end %>
-        </p>
+	        	<span class="[success alert secondary] label"><%= t %></span>
+	        <% end %>
+	      </p>
 			</div>
 		<% end %>
 	</div>
 
-	<div class="panel small-6 columns container2">
+	<div class="panel small-6 columns container2 desktop-only">
 		<div class="row">
-			<div class="panel small-6 columns sm-dash-widget1">
-				<h2>Total Errors</h2>
+			<div class="panel small-6 columns circle-widget1">
+				<h2><i class="fa fa-exclamation-triangle"></i> Total Errors</h2>
 				<p><%= @total_errors %></p>
 			</div>
 
-			<div class="panel small-6 columns sm-dash-widget2">
-				<h2>Unsolved</h2>
+			<div class="panel small-6 columns circle-widget2">
+				<h2><i class="fa fa-times"></i> Unsolved</h2>
 				<p><%= @unsolved_errors %></p>
 			</div>
 		</div>
 		
-		<div class="row panel callout unique-tags">
+		<div class="row panel unique-tags-widget">
+			<h2><i class="fa fa-cloud"></i> Tag Cloud</h2>
 			<p>
 				<% @unique_user_tags.each do |tag| %>
 					<span class="[success alert secondary] label"><%= link_to "#{tag}", tag_path(tag) %></span>
 				<% end %>
 			</p>
-
 		</div>
-
-
-		</div>
+	</div>
 </div>
 
