--- a/app/views/errorlogs/show.html.erb
+++ b/app/views/errorlogs/show.html.erb
@@ -1,9 +1,10 @@
+<!-- Display WITH Image -->
 <% if @errorlog.image_file_name != nil %>
 	<div class="row">
 		<div class="small-9 columns title">
 			<h2><%= @errorlog.title %></h2>
 		</div>
-		<div class="small-9 columns screenshot panel">
+		<div class="small-9 columns panel">
 			<%= image_tag @errorlog.image.url %>
 		</div>
 		<div class="small-3 columns panel desktop-only">
@@ -30,6 +31,7 @@
 		</div>
 	</div>
 <% else %>
+<!-- Display WITHOUT Image -->
 	<div class="row">
 		<div class="small-9 columns title">
 			<h2><%= @errorlog.title %></h2>
@@ -65,7 +67,7 @@
 <% @errorlog.solutions.each do |solution| %>
 	<% if solution.worked == true %>
 		<div class="row">
-			<div class="small-9 columns panel callout radius worked-solution-desc">
+			<div class="small-9 columns panel callout worked-solution-desc">
 				<%= simple_format(solution.description) %>
 				<%= link_to "Edit Solution", edit_errorlog_solution_path(@errorlog, solution) %>
 			</div>
