--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -5,7 +5,7 @@
 
 	<div class="panel small-12 large-6 columns container1">
 		<% @user_errorlogs.each do |errorlog|%>
-			<div class="panel dash-panel">
+			<div class="panel dash-error-panel">
 			  <h5><i class="fa fa-exclamation-triangle"></i> <%= link_to errorlog.title, errorlog_path(errorlog) %></h5>
 			  <p>
 			  	<% raw errorlog.tags.map(&:tag_name).map {|t| link_to t, tag_path(t)}.each do |t| %>
@@ -16,7 +16,7 @@
 		<% end %>
 	</div>
 
-	<div class="panel small-6 columns container2 desktop-only">
+	<div class="panel large-6 columns container2 desktop-only">
 		<div class="row">
 			<div class="panel small-6 columns circle-widget1">
 				<h2><i class="fa fa-exclamation-triangle"></i> Total Errors</h2>
