--- a/app/views/layouts/_sidenav.html.erb
+++ b/app/views/layouts/_sidenav.html.erb
@@ -1,6 +1,6 @@
 <div class="icon-bar vertical three-up large-2 columns end desktop-only">
   <a class="item" href="/dashboard">
-    <i class="fa fa-home"> Dashboard</i>
+    <i class="fa fa-home"> Home</i>
   </a>
   <a class="item" href="/errorlogs/new">
     <i class="fa fa-plus"> New Error</i>
