--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,5 +20,10 @@
   <body>
 		<%= render "layouts/header" %>
     <%= yield %>
+    <script>
+    $(function() {
+      $( document ).tooltip();
+    });
+    </script>
   </body>
 </html>
