--- a/app/views/errorlogs/index.html.erb
+++ b/app/views/errorlogs/index.html.erb
@@ -1,5 +1,22 @@
 <p>Testing error logs index page</p>
 
-<% @public_errorlogs.each do |errorlog| %>
-	<%= errorlog.title %>
-<% end %>
+<div class="panel small-12 large-6 columns container1">
+	<% @public_errorlogs.each do |errorlog|%>
+		<div class="panel dash-error-panel">
+			<div class="row">
+				<div class="small-11 columns">
+		  		<h5><i class="fa fa-exclamation-triangle"></i> <%= link_to errorlog.title, errorlog_path(errorlog) %></h5>
+				</div>
+				<div class="small-1 column action-icons">
+					<%= link_to '<i class="fa fa-pencil-square-o"></i>'.html_safe, edit_errorlog_path(errorlog) %>
+					<%= link_to '<i class="fa fa-trash-o"></i>'.html_safe, errorlog_path(errorlog), method: :delete %>
+				</div>
+			</div>
+		  <p>
+		  	<% raw errorlog.tags.map(&:tag_name).map {|t| link_to t, tag_path(t)}.each do |t| %>
+        	<span class="[success alert secondary] label"><%= t %></span>
+        <% end %>
+      </p>
+		</div>
+	<% end %>
+</div>
