--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,12 +1,26 @@
 <div class="dashboard-content small-9 columns">
-	<div class="title">
-		<h3>Your Error Logs</h3>
+	<div class="row">
+		<div class="title small-6 columns">
+			<h3>Your Error Logs</h3>
+		</div>
+
+		<div class="title small-6 columns">
+			<h3>Overview</h3>
+		</div>
 	</div>
 
 	<div class="panel small-12 large-6 columns container1">
 		<% @user_errorlogs.each do |errorlog|%>
 			<div class="panel dash-error-panel">
-			  <h5><i class="fa fa-exclamation-triangle"></i> <%= link_to errorlog.title, errorlog_path(errorlog) %></h5>
+				<div class="row">
+					<div class="small-11 columns">
+			  		<h5><i class="fa fa-exclamation-triangle"></i> <%= link_to errorlog.title, errorlog_path(errorlog) %></h5>
+					</div>
+					<div class="small-1 column action-icons">
+						<%= link_to '<i class="fa fa-pencil-square-o"></i>'.html_safe, edit_errorlog_path(errorlog) %>
+						<%= link_to '<i class="fa fa-trash-o"></i>'.html_safe, errorlog_path(errorlog), method: :delete %>
+					</div>
+				</div>
 			  <p>
 			  	<% raw errorlog.tags.map(&:tag_name).map {|t| link_to t, tag_path(t)}.each do |t| %>
 	        	<span class="[success alert secondary] label"><%= t %></span>
