--- a/app/views/errorlogs/index.html.erb
+++ b/app/views/errorlogs/index.html.erb
@@ -1,5 +1,3 @@
-
-
 <div class="row">
 	<div class="title small-12 columns">
 		<h3>Public Errorlogs</h3>
@@ -11,8 +9,11 @@
 		<% @public_errorlogs.each do |errorlog|%>
 			<div class="panel dash-error-panel">
 				<div class="row">
-					<div class="small-12 columns">
+					<div class="small-9 columns">
 			  		<h5><i class="fa fa-exclamation-triangle"></i> <%= link_to errorlog.title, errorlog_path(errorlog) %></h5>
+					</div>
+					<div class="small-3 column action-icons">
+						<p>Posted by: <%= errorlog.user.username %></p>
 					</div>
 				</div>
 			  <p>
