--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,55 +1,61 @@
 <div class="dashboard-content small-9 columns">
 	<div class="row">
-		<div class="title small-6 columns">
-			<h3>Your Error Logs</h3>
+		<div class="dash-err-title small-12 large-6 columns">
+			<h3><i class="fa fa-list-ol"></i> Your Error Logs</h3>
 		</div>
-
-		<div class="title small-6 columns">
-			<h3>Overview</h3>
+		<div class="dash-overview-title small-5 columns desktop-only overview-title">
+			<h3><i class="fa fa-pie-chart"></i> Overview</h3>
 		</div>
 	</div>
 
-	<div class="panel small-12 large-6 columns container1">
-		<% @user_errorlogs.each do |errorlog|%>
-			<div class="panel dash-error-panel">
-				<div class="row">
-					<div class="small-11 columns">
-			  		<h5><i class="fa fa-exclamation-triangle"></i> <%= link_to errorlog.title, errorlog_path(errorlog) %></h5>
+	<div class="row">
+
+		<div class="panel small-12 large-6 columns container1">
+			<% @user_errorlogs.each do |errorlog|%>
+				<div class="panel dash-error-panel">
+					<div class="row">
+						<div class="small-11 columns">
+				  		<h5><i class="fa fa-exclamation-triangle"></i> <%= link_to errorlog.title, errorlog_path(errorlog) %></h5>
+						</div>
+						<div class="small-1 column action-icons">
+							<%= link_to '<i class="fa fa-pencil-square-o"></i>'.html_safe, edit_errorlog_path(errorlog) %>
+							<%= link_to '<i class="fa fa-trash-o"></i>'.html_safe, errorlog_path(errorlog), method: :delete %>
+						</div>
 					</div>
-					<div class="small-1 column action-icons">
-						<%= link_to '<i class="fa fa-pencil-square-o"></i>'.html_safe, edit_errorlog_path(errorlog) %>
-						<%= link_to '<i class="fa fa-trash-o"></i>'.html_safe, errorlog_path(errorlog), method: :delete %>
-					</div>
+				  <p>
+				  	<% raw errorlog.tags.map(&:tag_name).map {|t| link_to t, tag_path(t)}.each do |t| %>
+		        	<span class="[success alert secondary] label"><%= t %></span>
+		        <% end %>
+		      </p>
 				</div>
-			  <p>
-			  	<% raw errorlog.tags.map(&:tag_name).map {|t| link_to t, tag_path(t)}.each do |t| %>
-	        	<span class="[success alert secondary] label"><%= t %></span>
-	        <% end %>
-	      </p>
-			</div>
-		<% end %>
-	</div>
+			<% end %>
+		</div>
 
-	<div class="panel large-6 columns container2 desktop-only">
-		<div class="row">
-			<div class="panel small-6 columns circle-widget1">
-				<h2><i class="fa fa-exclamation-triangle"></i> Total Errors</h2>
-				<p><%= @total_errors %></p>
-			</div>
+		<div class="panel large-6 columns container2 desktop-only">
+			<div class="row">
+				<div class="panel small-6 columns circle-widget1">
+					<p><%= @total_errors %></p>
+					<h2><i class="fa fa-exclamation-triangle"></i> Total Errors</h2>
+				</div>
 
-			<div class="panel small-6 columns circle-widget2">
-				<h2><i class="fa fa-times"></i> Unsolved</h2>
-				<p><%= @unsolved_errors %></p>
+				<div class="panel small-6 columns circle-widget2">
+					<p><%= @unsolved_errors %></p>
+					<h2><i class="fa fa-times"></i> Unsolved</h2>
+				</div>
 			</div>
 		</div>
 		
-		<div class="row panel unique-tags-widget">
-			<h2><i class="fa fa-cloud"></i> Tag Cloud</h2>
-			<p>
-				<% @unique_user_tags.each do |tag| %>
-					<span class="[success alert secondary] label"><%= link_to "#{tag}", tag_path(tag) %></span>
-				<% end %>
-			</p>
+		<div class="title small-5 small-offset-1 columns widget-title">
+			<h3><i class="fa fa-cloud"></i> Tag Cloud</h3>
+		</div>
+		<div class="panel large-6 columns container2 desktop-only">
+			<div class="row panel unique-tags-widget">
+				<p>
+					<% @unique_user_tags.each do |tag| %>
+						<span class="[success alert secondary] label"><%= link_to "#{tag}", tag_path(tag) %></span>
+					<% end %>
+				</p>
+			</div>
 		</div>
 	</div>
 </div>
