--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -57,6 +57,19 @@
 				</p>
 			</div>
 		</div>
+
+		<div class="title small-5 small-offset-1 columns widget-title">
+			<h3><i class="fa fa-cloud"></i> Errorlog Stats</h3>
+		</div>
+		<div class="panel large-6 columns container2 desktop-only">
+				<%= content_tag "div", id: "tag_chart", data: {tags: @tagcount} do %>
+					
+				<% end %>
+		</div>
 	</div>
 </div>
+
+
+<script type="text/javascript" src="chart.js"></script>
+
 
