--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,11 +1,8 @@
 <div class="row">
-  <div class="row">
-    <div class="small-12 large-8 columns end title">
+  <div class="signup-form large-10 large-offset-2 columns">
+    <div class="small-12 large-6 end title">
       <h2>Sign Up</h2>
     </div>
-  </div>
-
-  <div class="signup-form large-10 columns">
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= devise_error_messages! %>
       <div class="row">
@@ -51,8 +48,8 @@
       </div>
 
       <div class="row">
-        <div class="small-6 columns">
-          <%= f.submit "Sign up" %>
+        <div class="small-12 columns">
+          <%= f.submit "Sign up", class: "button red-button"  %>
         </div>
       </div>
     <% end %>
