--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,26 +1,39 @@
 <div class="dashboard-content small-12 large-9 columns">
 	<div class="row">
-		<div class="dash-err-title small-12 large-6 columns">
-			<h3><i class="fa fa-list-ol"></i> Your Error Logs</h3>
-		</div>
-		<div class="dash-overview-title small-5 columns desktop-only overview-title">
-			<h3><i class="fa fa-pie-chart"></i> Overview</h3>
-		</div>
-	</div>
-
-	<div class="row">
-		<div class="panel small-12 large-6 columns container1">
-			<%= render 'errorlog_list_widget' %>
+		<div class="small-6 columns">
+			<div class="dash-err-title small-12 columns">
+				<h3><i class="fa fa-list-ol"></i> Your Error Logs</h3>
+			</div>
+			<div class="panel large-12 columns">
+				<%= render 'errorlog_list_widget' %>
+			</div>
 		</div>
 
-		<div class="panel large-6 columns container2 desktop-only">
-			<%= render 'overview_widget' %>
-		</div>
-		
-		<%= render 'taglist_widget' %>
+		<div class="small-6 columns">
+			<div class="dash-overview-title small-12 columns desktop-only overview-title">
+				<h3><i class="fa fa-binoculars"></i> Overview</h3>
+			</div>
 
-		<%= render 'errorlog_piechart_widget' %>
+			<div class="panel large-12 columns desktop-only">
+				<%= render 'overview_widget' %>
+			</div>
+
+			<div class="dash-overview-title small-12 columns desktop-only overview-title">
+				<h3><i class="fa fa-cloud"></i> Tags</h3>
+			</div>
+
+			<div class="panel large-12 columns desktop-only">
+				<%= render 'taglist_widget' %>
+			</div>
+
+			<div class="dash-overview-title small-12 columns desktop-only overview-title">
+				<h3><i class="fa fa-pie-chart"></i> Errorlog Stats</h3>
+			</div>
+
+			<div class="panel large-12 columns desktop-only">
+				<%= render 'errorlog_piechart_widget' %>
+			</div>
+		</div>
 	</div>
 </div>
-
 
